# vault-spec

./: .gitignore  .goreleaser.yml  BUILD  Gopkg.toml  Makefile  README.md  WORKSPACE  main.go  sample.vaultspec.yml
cmd/: BUILD.bazel  apply.go  root.go  validate.go
spec/: BUILD.bazel  loader.go  spec.go  v1.go  v1_test.go  v1err.go
