load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "apply.go",
        "root.go",
        "validate.go",
    ],
    importpath = "github.com/zerok/vault-spec/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//spec:go_default_library",
        "//vendor/github.com/chzyer/readline:go_default_library",
        "//vendor/github.com/hashicorp/vault/api:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
