load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "loader.go",
        "spec.go",
        "v1.go",
        "v1err.go",
    ],
    importpath = "github.com/zerok/vault-spec/spec",
    visibility = ["//visibility:public"],
    deps = ["//vendor/gopkg.in/yaml.v2:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["v1_test.go"],
    embed = [":go_default_library"],
)
